# market-feed-intelligence

./: .gitignore  Makefile  README.md  run.sh
apps/service/: .env.example  README.md  pyproject.toml
apps/service/src/: __init__.py  config.py
apps/service/src/adapters/: __init__.py  base.py  finnhub_adapter.py  fred_adapter.py  yfinance_adapter.py
apps/service/src/api/: app.py  dependencies.py
apps/service/src/api/routes/: briefing_generations.py  cache.py  correlation_mappings.py  customers.py  personas.py  refresh.py
apps/service/src/db/: __init__.py  models.py  session.py
apps/service/src/domain/: client_context_models.py  models.py
apps/service/src/jobs/: __init__.py  bootstrap_correlation_mappings.py  bootstrap_customers.py  bootstrap_history.py  bootstrap_personas.py  correlate.py  ingest.py  normalize.py  refresh_cache.py
apps/service/src/repositories/: briefing_generation_repository.py  cache_repository.py  correlation_mapping_repository.py  customer_repository.py  persona_repository.py
apps/service/src/sales_intelligence_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/service/src/services/: briefing_generation_service.py  cache_query_service.py  cache_service.py  correlation_mapping_service.py  correlation_resolver.py  customer_service.py  persona_service.py  refresh_orchestrator.py
apps/web/: .env.example  README.md  next.config.mjs  package-lock.json  package.json
data/customers/: C001.json  C002.json  C003.json  C004.json  C005.json
data/personas/: hni_equity.json  inst_fund.json
deploy/nginx/: market-feed.conf
deploy/systemd/: market-feed-api.service  market-feed-web.service
docs/: architecture-decision-record.md  cache-contract.md
docs/app/: 01-overview.md  02-runtime-flow.md  README.md  (+1 more)
scripts/: run-api.sh  run-web.sh  setup-vm.sh
(+75 files in other folders)
