[project]
name = "sales-intelligence-service"
version = "0.1.0"
description = "Python jobs and domain services for the Macquarie Sales Intelligence Agent PoC."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.49.0",
  "chromadb>=0.5.23",
  "fredapi>=0.5.2",
  "httpx>=0.28.1",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "pydantic>=2.11.1",
  "scipy>=1.15.2",
  "sentence-transformers>=3.4.1",
  "yfinance>=0.2.54"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "ruff>=0.11.2"
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
