[project]
name = "sales-intelligence-service"
version = "0.1.0"
description = "Python jobs and domain services for the Macquarie Sales Intelligence Agent PoC."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fredapi>=0.5.2",
  "httpx>=0.28.1",
  "pandas>=2.2.3",
  "pydantic>=2.11.1",
  "yfinance>=0.2.54"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.2"
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
